@@ -1,7 +1,6 @@
 package com.faforever.neroxis.util;
 
 import com.faforever.neroxis.mask.Mask;
-import com.faforever.neroxis.visualization.VisualDebugger;
 import lombok.Getter;
 
 import java.io.File;
@@ -11,7 +10,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
@@ -27,8 +25,7 @@ public class Pipeline {
     private static final List<Entry> pipeline = new ArrayList<>();
     private static final ExecutorService executorService = Executors.newFixedThreadPool(
             Runtime.getRuntime().availableProcessors());
-    public static boolean HASH_MASK = false;
-    private static CompletableFuture<List<Mask<?, ?>>> started = new CompletableFuture<>();
+    private static CompletableFuture<Void> started = new CompletableFuture<>();
     private static String[] hashArray;
 
     public static void reset() {
@@ -42,32 +39,31 @@ public class Pipeline {
         if (isRunning()) {
             throw new UnsupportedOperationException("Mask added after pipeline started");
         }
-        String callingMethod = null;
-        String callingLine = null;
 
-        if (DebugUtil.DEBUG) {
+        String callingMethod;
+        String callingLine;
+        if (DebugUtil.shouldVisualize(executingMask)) {
             callingMethod = DebugUtil.getLastStackTraceMethodInPackage("com.faforever.neroxis.mask");
             callingLine = DebugUtil.getLastStackTraceLineAfterPackage("com.faforever.neroxis.mask");
+        } else {
+            callingMethod = null;
+            callingLine = null;
         }
 
         List<Entry> entryDependencies = Pipeline.getDependencyList(maskDependencies, executingMask);
-        String finalCallingLine = callingLine;
-        String finalCallingMethod = callingMethod;
         CompletableFuture<Void> newFuture = Pipeline.getDependencyFuture(entryDependencies)
                                                     .thenAcceptAsync(dependencies -> {
                                                         long startTime = System.currentTimeMillis();
-                                                        boolean visualDebug = executingMask.isVisualDebug();
-                                                        executingMask.setVisualDebug(false);
                                                         function.accept(dependencies);
                                                         long functionTime = System.currentTimeMillis() - startTime;
                                                         startTime = System.currentTimeMillis();
-                                                        if (HASH_MASK) {
+                                                        if (DebugUtil.DEBUG) {
                                                             try {
                                                                 hashArray[index] = String.format("%s,\t%s,\t%s,\t%s%n",
                                                                                                  executingMask.toHash(),
-                                                                                                 finalCallingLine,
+                                                                                                 callingLine,
                                                                                                  executingMask.getName(),
-                                                                                                 finalCallingMethod);
+                                                                                                 callingMethod);
                                                             } catch (NoSuchAlgorithmException e) {
                                                                 System.err.println("Cannot hash mask");
                                                             }
@@ -77,16 +73,10 @@ public class Pipeline {
                                                             System.out.printf(
                                                                     "Entry Done: function time %4d ms; hash time %4d ms; %s(%d); %s  -> %s\n",
                                                                     functionTime, hashTime, executingMask.getName(),
-                                                                    index, finalCallingLine, finalCallingMethod);
+                                                                    index, callingLine, callingMethod);
                                                         }
-                                                        executingMask.setVisualDebug(visualDebug);
-                                                        if ((DebugUtil.DEBUG && visualDebug) || (DebugUtil.VISUALIZE
-                                                                                                 &&
-                                                                                                 !executingMask.isMock())) {
-                                                            VisualDebugger.visualizeMask(executingMask,
-                                                                                         finalCallingMethod,
-                                                                                         finalCallingLine);
-                                                        }
+                                                        DebugUtil.visualizeIfSet(executingMask, callingMethod,
+                                                                                 callingLine);
                                                     }, executorService);
 
         Entry entry = new Entry(index, executingMask, entryDependencies, newFuture, callingMethod, callingLine);
@@ -124,16 +114,12 @@ public class Pipeline {
      */
     private static CompletableFuture<List<Mask<?, ?>>> getDependencyFuture(List<Entry> dependencyList) {
         if (pipeline.isEmpty() || dependencyList.isEmpty()) {
-            return started;
+            return started.thenApply(aVoid -> List.of());
         }
 
         CompletableFuture<?>[] futures = dependencyList.stream()
                                                        .map(Entry::getFuture)
                                                        .toArray(CompletableFuture<?>[]::new);
-
-        if (futures.length == 0) {
-            return started;
-        }
 
         return CompletableFuture.allOf(futures)
                                 .thenApplyAsync(aVoid -> dependencyList.stream()
@@ -149,9 +135,9 @@ public class Pipeline {
 
     public static void start() {
         System.out.println("Starting pipeline");
-        hashArray = new String[getPipelineSize()];
 
         if (DebugUtil.DEBUG) {
+            hashArray = new String[getPipelineSize()];
             pipeline.forEach(entry -> System.out.printf(
                     "Pipeline entry: %s;\tdependencies:[%s];\tdependants:[%s];\texecuteMask %s;\tLine: %s;\t Method: %s\n",
                     entry.toString(),
@@ -159,6 +145,7 @@ public class Pipeline {
                     entry.getDependants().stream().map(Entry::toString).collect(Collectors.joining(", ")),
                     entry.getExecutingMask().getName(), entry.getLine(), entry.getMethodName()));
         }
+
         started.complete(null);
     }
 
@@ -172,10 +159,8 @@ public class Pipeline {
     }
 
     public static void await(Mask<?, ?>... masks) {
-        if (!isRunning()) {
-            throw new IllegalStateException("Pipeline not started cannot await");
-        }
-        getDependencyList(Arrays.asList(masks)).forEach(e -> e.getFuture().join());
+        started.join();
+        getDependencyList(List.of(masks)).forEach(e -> e.getFuture().join());
     }
 
     public static void toFile(Path path) throws IOException {
